opam-version: "1.2"
version: "1.1"
maintainer: "berke.durak@gmail.com"
authors: ["Berke Durak"]
homepage: "https://github.com/berke/fling"
bug-reports: "https://github.com/berke/fling/issues"
dev-repo: "https://github.com/berke/fling.git"
license: "http://lambda-diode.com/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_sexp_conv"
  "sexplib"
]
